# programming_examples

./: .gitignore  README.md
python/speeding_up_python/: README.md  compile.py  main_complex.py  main_multi.py  main_plain.py  requirements.txt
python/speeding_up_python/cpp/: .gitignore  CMakeLists.txt
python/speeding_up_python/cpp/src/: main.cpp  main_nanobind.cpp  spd.hpp  test_main.cpp
python/speeding_up_python/cpp/src/cmake/: Dependencies.cmake  StandardProjectSettings.cmake
